# Aegis

./: .coveragerc  .gitignore  .ruff.toml  README.md  main.py  main_export_header.py  main_metrics.py  main_threshold.py  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml
a3d/: analog_lut.py  config.py  decoder_bposd.py  decoder_greedy.py  decoder_ml.py  decoder_mwpm.py  export.py  graph.py  hardware_interface.py  layouts.py  metrics.py  noise_physical.py  runtime.py  sweep.py
tests/: test_homology_exact.py  test_metrics_logical_success.py  test_pipeline_integration.py  test_runtime_logging.py  test_runtime_mwpm.py  test_syndrome_locality.py
